Add color pallete, ckeditor for post creation and new font,icon and logo

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -34,14 +34,14 @@
   position: relative;
 }
 .banner-dash-left {
-  border-bottom: 3px solid $dark-yellow;
+  border-bottom: 3px solid $emp-blue;
   position: absolute;
   top: 50%;
   left: -28px;
   width: 60px;
 }
 .banner-dash-right {
-  border-bottom: 3px solid $dark-yellow;
+  border-bottom: 3px solid $emp-blue;
   position: absolute;
   top: 50%;
   right: -28px;
