--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,6 +1,6 @@
 .grey-header {
-  color: $dark-yellow;
-  background-color: $dark-grey;
+  color: $emp-blue;
+  background-color: $dark-gray;
   height: 80px;
   width: 100vw;
   display: flex;
