--- a/app/assets/stylesheets/components/_shopbar.scss
+++ b/app/assets/stylesheets/components/_shopbar.scss
@@ -51,13 +51,13 @@
   margin-right: 10px;
   border-radius: 5px;
   outline: none;
-  color: $dark-grey;
+  color: $dark-gray;
   opacity: 0.7;
   font-size: 1.3em;
 }
 
 .searchTerm:focus{
-  color: $dark-grey;
+  color: $dark-gray;
   opacity: 1;
 }
 
@@ -66,10 +66,10 @@
   right: 0px;
   width: 45px;
   height: 45px;
-  border: 0px solid $dark-yellow;
-  background: $dark-yellow;
+  border: 0px solid $emp-blue;
+  background: $emp-blue;
   text-align: center;
-  color: $dark-grey;
+  color: $dark-gray;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1.5em;
