--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,10 +7,9 @@ $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
-$light-gray: #F4F4F4;
 
-$dark-grey: #5b5a5e;
-$dark-yellow: #f1cf00;
-$light-grey: #eaeaea;
+$dark-gray: #5c5963;
+$emp-green: #a3c123;
+$emp-blue: #0ac3e3;
+$light-gray: #eaeaea;
 $white: #ffffff;
-
