--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,32 @@
-<%= simple_form %>
+<%= simple_form_for @post do |f| %>
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= "#{pluralize(@post.errors.count, "erro")} impediram esse post de ser salvo:" %>
+      </h2>
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li>
+            <%= msg %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.input :title, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.input :display_url, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.button :submit, class: 'btn-primary' %>
+  </div>
+<% end %>
