--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,28 @@
-Post index
+<div class="container">
+  <h2>Posts:</h2>
+  <div class="col-10 col-offset-1">
+    <div class="row">
+      <% @posts.each do |post| %>
+        <div class="col-12 text-center">
+          <div class="post-head">
+
+              <h3><%= post.title %></h3>
+              <h5><%= post.created_at.strftime('%b %d, %Y') %></h5>
+
+          </div>
+
+          <div class="post-body">
+            <%= raw(post.body).truncate(358) %>
+          </div>
+          <%= link_to "Leia Mais", "post/#{post.display_url}", class: "btn btn-primary" %>
+        </div>
+      <% end %>
+
+    </div>
+
+  </div>
+</div>
+
+
+
+
