Add sticky footer, fonts and gray logo

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -71,6 +71,5 @@
 
 
 
-$body-font: 'Montserrat', 'sans-serif';
-
-$headers-font: 'Montserrat', 'sans-serif';
+$body-font: 'Mukta Vaani', 'sans-serif';
+$headers-font: 'Mukta Vaani', 'sans-serif';
