--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,8 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+a {
+  text-decoration: none;
+  color: black;
+}
