--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,4 +9,14 @@
     <%= raw(@post.body) %>
   </div>
       <%= link_to "Voltar", blog_path, class: "btn btn-primary"  %>
+      <% if current_user && current_user.admin %>
+        <div class="icons-div">
+          <%= link_to edit_post_path(@post), class: "edit-icon" do %>
+          <i class="fas fa-edit"></i>
+        <% end %>
+        <%= link_to "/posts/#{@post.id}", method: :delete, class: "delete-icon", onclick: "if (!confirm('Are you sure?')) { return false }" do %>
+          <i class="fas fa-trash-alt"></i>
+        <% end %>
+        </div>
+      <% end %>
 </div>
