Add uploader and banner photo to posts

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,1 +1,5 @@
-<%= link_to "Criar Post", new_post_path, class: "btn btn-primary" %>
+<div class="container text-center">
+  <h1>Painel Admin</h1>
+  <%= link_to "Criar Post", new_post_path, class: "btn btn-primary" %>
+
+</div>
