Add banner to post and validations

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,14 @@
+<div class="banner-post" style="background-image: url(<%= @post.primary_photo.url %>) !important;">
+  <div class="banner-item">
+    <h1 class="banner-text"><%= @post.title %></h1>
+    <p><%= @post.created_at.strftime('%b %d, %Y') %> || <%= @post.user.first_name %></p>
+  </div>
+</div>
+
 <div class="col-12 text-center">
   <div class="post-head">
 
-      <h3><%= @post.title %></h3>
-      <h5><%= @post.created_at.strftime('%b %d, %Y') %></h5>
+
   </div>
 
   <div class="post-body">
