--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -26,6 +26,34 @@
   }
 }
 
+
+.banner-post {
+  color: white;
+  text-align: center;
+  width: 100vw;
+  height: 420px;
+  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  background-size: cover !important;
+  background-position: center center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  h1 {
+    font-size: 50px;
+    font-weight: bold;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+  p {
+  font-size: 25px;
+  font-weight: lighter;
+  color: #tbc-white;
+  opacity: 0.6;
+  margin-bottom: 30px;
+  }
+}
+
 .banner-logo {
   height: 84px;
   margin-bottom: 10px;
