--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -4,16 +4,16 @@
   width: 100vw;
   height: 420px;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background: image-url('green-leaves-plant');
+  background: image-url('Hero-post.png');
   background-size: cover !important;
   background-position: center center;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0;
   padding: 0;
   h1 {
-    font-size: 50px;
+    font-size: 38px;
     font-weight: bold;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   }
@@ -40,11 +40,6 @@
   justify-content: center;
   margin: 0;
   padding: 0;
-  h1 {
-    font-size: 50px;
-    font-weight: bold;
-    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  }
   p {
   font-size: 25px;
   font-weight: lighter;
@@ -60,18 +55,25 @@
 }
 .banner-text {
   position: relative;
+  padding: 16px;
+  max-width: 40vw;
+  background-color: rgba(40,40,40, 0.3);
+  border-radius: 8px;
+  text-align: left;
+  margin-left: 32px;
+  h1 {
+    font-size: 30px;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+  p {
+    font-size: 22px;
+
+  }
 }
-.banner-dash-left {
-  border-bottom: 3px solid $emp-green;
-  position: absolute;
-  top: 50%;
-  left: -68px;
-  width: 60px;
-}
-.banner-dash-right {
-  border-bottom: 3px solid $emp-green;
-  position: absolute;
-  top: 50%;
-  right: -68px;
-  width: 60px;
+
+
+@media (max-width: 600px) {
+  .banner-text {
+    max-width: 300px;
+  }
 }
