--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
   padding: 0 40px;
   margin: 0;
   z-index: 500;
-  background-color: $emp-blue;
+  background-color: rgb(252, 252, 252);
   display: flex;
   align-items: center;
   justify-content: space-between;
