--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -3,3 +3,20 @@
   font-weight: bold;
   font-size: 24px;
 }
+
+.ebook-box {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  h2 {
+    flex-grow: 1;
+    font-size: 22px;
+  }
+}
+
+.form-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
