--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,5 +1,6 @@
 <div class="container text-center">
   <h1>Painel Admin</h1>
   <%= link_to "Criar Post", new_post_path, class: "btn btn-primary" %>
-
+  <%= link_to "Relatorio de Leads em CSV", leads_path(format: "csv"), class: "btn btn-info" %>
+  <%= link_to "Relatorio de Leads em Excel", leads_path(format: "xls"), class: "btn btn-success" %>
 </div>
