--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -4,11 +4,12 @@
   font-size: 24px;
 }
 
-.ebook-box {
+#ebook-box {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
+  padding: 8px;
   h2 {
     flex-grow: 1;
     font-size: 22px;
@@ -19,4 +20,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (min-width: 700px) {
+  #ebook-box {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 500;
+    background-color: $emp-blue;
+  }
 }
