Add google analytics and fixed ebook after scroll on posts page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
 
-  <div id="ebook-box">
+  <div id="ebook-box" class="fixed-ebook">
     <h2>Baixe seu e-book agora!</h2>
     <div class="form-box">
       <%= form_for(@lead) do |f| %>
