--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,57 +7,7 @@
 
 <div class="container-fluid">
 
-  <div id="ebook-box" class="fixed-ebook">
-    <div class="ebook-info text-center">
-      <h2>BAIXE AQUI o nosso ebook: "Decole como MEI em 2019"</h2>
-      <p>Gratuito até 15/02/19</p>
-    </div>
-    <div class="form-box">
-      <%= form_for(@lead) do |f| %>
-        <div class="row">
-
-          <div class="col-12 col-md-6 col-lg-3">
-            <div class="form-group row">
-              <%= f.label :nome, class: "col-lg-2 col-form-label" %>
-              <div class="col-sm-10">
-                <%= f.text_field :nome, class: 'form-control field' %>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-3">
-            <div class="form-group row">
-              <%= f.label :sobrenome, class: "col-lg-3 col-form-label" %>
-              <div class="col-sm-9">
-                <%= f.text_field :sobrenome, class: 'form-control field' %>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-2">
-            <div class="form-group row">
-              <%= f.label :email, class: "col-lg-2 col-form-label" %>
-              <div class="col-sm-10">
-                <%= f.text_field :email, class: 'form-control field' %>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-2">
-            <div class="form-group">
-              <%= f.label :Tipo %>
-              <%= f.select :tipo, [["Quero Empreender", "B2C"], ["Sou Empreendedor", "B2B"]] %>
-            </div>
-          </div>
-          <%= f.hidden_field :ip, class: 'form-control', value: request.remote_ip %>
-
-          <div class="col-12 col-md-6 col-md-offset-3  col-lg-2">
-            <input type="submit" name="commit" value="Baixar e-book" class="btn btn-info" data-disable-with="Validando">
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
+  <%= render 'shared/ebox' %>
 
   <h2 class="second-header">Mais artigos</h2>
 
@@ -77,3 +27,9 @@
     <% end %>
   </div>
 </div>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    <%= render(:partial => 'shared/ebook', :handlers => [:erb], :formats => [:js]) %>
+  <% end %>
+<% end %>
