Fix Ebook div hiding footer

--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -16,6 +16,11 @@
   }
 }
 
+#ebook-wrapper {
+  background-color: white;
+  height: 144px;
+}
+
 .form-box {
   display: flex;
   justify-content: center;
