Add form modal and javascript timeout

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,3 +29,12 @@
     <%= render(:partial => 'shared/ebook', :handlers => [:erb], :formats => [:js]) %>
   <% end %>
 <% end %>
+
+
+
+
+<!-- Modal -->
+
+<%= render 'shared/modal' %>
+
+
