--- a/app/views/shared/_ebook.js.erb
+++ b/app/views/shared/_ebook.js.erb
@@ -16,4 +16,13 @@ const fixEbookOnScroll = () => {
   });
 }
 
+const openModal = () => {
+  const modalButton = document.querySelector('#modal-button');
+  modalButton.click();
+}
+
 fixEbookOnScroll();
+
+
+setTimeout(openModal, 5000);
+
