--- a/app/views/shared/_ebox.html.erb
+++ b/app/views/shared/_ebox.html.erb
@@ -43,7 +43,7 @@
           <%= f.hidden_field :ip, class: 'form-control', value: request.remote_ip %>
 
           <div class="col-12 col-md-6 col-md-offset-3  col-lg-2">
-            <input type="submit" name="commit" value="Baixar e-book" class="btn btn-info" data-disable-with="Validando">
+            <input type="submit" name="commit" value="Baixar e-book" class="btn btn-info" data-dismiss="modal" data-disable-with="Validando">
           </div>
         </div>
       <% end %>
