--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -71,6 +71,23 @@
   }
 }
 
+.post-banner-text {
+  position: relative;
+  padding: 16px;
+  max-width: 40vw;
+  background-color: rgba(40,40,40, 0.3);
+  border-radius: 8px;
+  text-align: left;
+  margin: 0;
+  h1 {
+    font-size: 30px;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+  p {
+    font-size: 22px;
+
+  }
+}
 
 @media (max-width: 600px) {
   .banner-text {
