Add modal to landing

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,3 +33,8 @@
     <%= render(:partial => 'shared/ebook', :handlers => [:erb], :formats => [:js]) %>
   <% end %>
 <% end %>
+
+
+<!-- Modal -->
+
+<%= render 'shared/modal' %>
