--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -78,7 +78,7 @@
   background-color: rgba(40,40,40, 0.3);
   border-radius: 8px;
   text-align: left;
-  margin: 0;
+  margin: 0 !important;
   h1 {
     font-size: 30px;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
