--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -89,6 +89,10 @@
   }
 }
 
+.post-banner-share {
+  margin: 10px !important;
+}
+
 @media (max-width: 600px) {
   .banner-text {
     max-width: 300px;
