--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -50,7 +50,7 @@
               </div>
 
               <%= f.hidden_field :ip, class: 'form-control', value: request.remote_ip %>
-                          <input type="submit" name="commit" value="Baixar e-book" class="btn btn-block btn-success" data-disable-with="Validando" data-dismiss="modal">
+                          <input type="submit" name="commit" value="Baixar e-book" class="btn btn-block btn-success modal-button" data-disable-with="Validando" data-dismiss="modal">
             <% end %>
           </div>
         </div>
