Add chart and fix ebook download

--- a/app/assets/stylesheets/pages/_admin.scss
+++ b/app/assets/stylesheets/pages/_admin.scss
@@ -21,3 +21,11 @@
   background-color: $emp-blue ;
   z-index: 13;
 }
+
+.admin-buttons-container {
+  margin: 30px;
+}
+
+.leads-chart {
+  margin: 40px 0 120px 0;
+}
