--- a/app/assets/stylesheets/pages/_admin.scss
+++ b/app/assets/stylesheets/pages/_admin.scss
@@ -2,12 +2,12 @@
   height: 32px;
   margin: 16px;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 40px;
   :first-child {
-        border-radius: 20px 0px 0px 20px;
+        border-radius: 40px 0px 0px 40px;
   }
   :last-child {
-        border-radius: 0px 20px 20px 0px;
+        border-radius: 0px 40px 40px 0px;
   }
 }
 
@@ -28,4 +28,10 @@
 
 .leads-chart {
   margin: 40px 0 120px 0;
+}
+
+.bar {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
