--- a/app/views/shared/_ebook.js.erb
+++ b/app/views/shared/_ebook.js.erb
@@ -21,7 +21,7 @@ const openModal = () => {
   modalButton.click();
 }
 
-fixEbookOnScroll();
+// fixEbookOnScroll();
 
 
 setTimeout(openModal, 6000);
