--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,10 +8,15 @@
   background-color: rgb(252, 252, 252);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   a {
     text-decoration: none;
     font-size: 0.8em;
+    background-color: rgb(252, 252, 252);
+  }
+
+  a:hover {
+    background-color: rgb(252, 252, 252) !important;
   }
 }
 
