--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -9,7 +9,8 @@
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  padding: 8px;
+  padding: 32px 8px;
+  background-color: $emp-blue;
   h2 {
     flex-grow: 1;
     font-size: 22px;
