--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,9 @@
     <%= link_to root_path, class: "nav-item-logo" do %>
       <%= image_tag 'Empreende1@2x.png', class: "logo" %>
     <% end %>
-    <div class="nav-items d-none d-lg-flex ">
+  </div>
+</div>
+    <div class="nav-items d-none ">
       <div class="nav-item-left">
       </div>
       <div class="nav-item-right">
@@ -18,7 +20,7 @@
     </div>
 
     <!-- Mobile dropdown list -->
-    <div class="nav-mobile d-flex d-lg-none">
+    <div class="nav-mobile d-none">
       <div class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars"></i></a>
          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
